--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <body>
 <h1>Jinghua Zhong</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>
+Technical Advisor - Systems Performance Analysis
+Cummins Technical Center, MC50040
+Columbus, IN 47401
+USA
+</p>
 </body>
 </html>
