--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 <body>
 <h1>Jinghua Zhong</h1>
-<p>
-Technical Advisor - Systems Performance Analysis
-Cummins Technical Center, MC50040
-Columbus, IN 47401
-USA
-</p>
+<p>Technical Advisor - Systems Performance Analysis</p>
+<p>Cummins Technical Center, MC50040</p>
+<p>Columbus, IN 47401</p>
+<p>USA</p>
 </body>
 </html>
