--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <body>
 <h1>Jinghua Zhong</h1>
-<p>Technical Advisor - Systems Performance Analysis</p>
-<p>Cummins Technical Center, MC50040</p>
-<p>Columbus, IN 47401</p>
-<p>USA</p>
+<p>
+  Technical Advisor - Systems Performance Analysis<br>
+  Cummins Technical Center, MC50040<br>
+  Columbus, IN 47401<br>
+  USA<br>
+</p>
 </body>
 </html>
