--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Jinghua Zhong</h1>
-<p>
-Technical Advisor - Systems Performance Analysis<br>
-Cummins Technical Center, MC50040<br>
-Columbus, IN 47401<br>
-</p>
-</body>
+  <head>
+  <title>Jinghua Zhong</title>
+  </head>
+  <body>
+    <h1>Jinghua Zhong</h1>
+    <p>
+      Technical Advisor - Systems Performance Analysis<br>
+      Cummins Technical Center, MC50040<br>
+      Columbus, IN 47401<br>
+    </p>
+  </body>
 </html>
