--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Jinghua Zhong</title>
+    <title>Jinghua Zhong</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <style>
+      html {font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif}
+    </style>
   </head>
   <body>
     <h1>Jinghua Zhong</h1>
