Add link to blank icon data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
       html {font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif}
     </style>
+    <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <h1>Jinghua Zhong</h1>
